<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.all580</groupId>
	<artifactId>base</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>base</name>
	<description>base parent</description>
	<modules>
		<module>base-api</module>
		<module>base-web</module>
		<module>base-rpc</module>
		<module>order-api</module>
		<module>order-rpc</module>
		<module>ep-api</module>
		<module>ep-rpc</module>

	</modules>
	<properties>
		<!-- Common libs -->
		<skip_maven_deploy>true</skip_maven_deploy>
		<framework-common_version>0.0.1-SNAPSHOT</framework-common_version>
		<lombok_version>1.16.8</lombok_version>
		<lts_version>1.6.9</lts_version>
		<commons-pool2_version>2.4.2</commons-pool2_version>
		<dubbo_version>2.5.4-SNAPSHOT</dubbo_version>
		<spring_version>3.2.16.RELEASE</spring_version>
		<javassist_version>3.20.0-GA</javassist_version>
		<netty_version>3.2.5.Final</netty_version>
		<mina_version>1.1.7</mina_version>
		<grizzly_version>2.1.4</grizzly_version>
		<httpclient_version>4.1.2</httpclient_version>
		<hessian_lite_version>3.2.1-fixed-2</hessian_lite_version>
		<xstream_version>1.4.1</xstream_version>
		<fastjson_version>1.1.39</fastjson_version>
		<bsf_version>3.1</bsf_version>
		<sorcerer_version>0.8</sorcerer_version>
		<zookeeper_version>3.3.3</zookeeper_version>
		<zkclient_version>0.1</zkclient_version>
		<curator_version>1.1.16</curator_version>
		<jedis_version>2.4.2</jedis_version>
		<xmemcached_version>1.3.6</xmemcached_version>
		<cxf_version>2.6.1</cxf_version>
		<thrift_version>0.8.0</thrift_version>
		<jfreechart_version>1.0.13</jfreechart_version>
		<hessian_version>4.0.7</hessian_version>
		<servlet_version>2.5</servlet_version>
		<jetty_version>6.1.26</jetty_version>
		<validation_version>1.0.0.GA</validation_version>
		<hibernate_validator_version>4.2.0.Final</hibernate_validator_version>
		<jcache_version>0.4</jcache_version>
		<sca_version>2.0-M5.1</sca_version>
		<guice_version>3.0</guice_version>
		<cglib_version>2.2</cglib_version>
		<webx_version>3.0.8</webx_version>
		<!-- Log libs -->
		<slf4j_version>1.6.2</slf4j_version>
		<jcl_version>1.1</jcl_version>
		<log4j_version>1.2.16</log4j_version>
		<logback_version>1.0.6</logback_version>
		<!-- Test libs -->
		<junit_version>4.10</junit_version>
		<easymock_version>3.0</easymock_version>
		<jmockit_version>0.999.8</jmockit_version>
		<!-- Build args -->
		<argline>-server -Xms64m -Xmx256m -XX:PermSize=64m
			-XX:MaxPermSize=128m -Dfile.encoding=UTF-8
			-Djava.net.preferIPv4Stack=true</argline>
		<skip_maven_deploy>false</skip_maven_deploy>
		<updateReleaseInfo>true</updateReleaseInfo>
		<project.build.sourceEncoding>${file_encoding}</project.build.sourceEncoding>

		<!-- for maven compiler plugin -->
		<maven_compiler_plugin_version>3.5.1</maven_compiler_plugin_version>
		<java_source_version>1.6</java_source_version>
		<java_target_version>1.6</java_target_version>
		<file_encoding>UTF-8</file_encoding>

	</properties>
	<dependencyManagement>
		<dependencies>
			<!-- Common libs -->
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-framework-bom</artifactId>
				<version>${spring_version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>com.framework</groupId>
				<artifactId>framework-common</artifactId>
				<version>${framework-common_version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-pool2</artifactId>
				<version>${commons-pool2_version}</version>
			</dependency>
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${lombok_version}</version>
			</dependency>
			<dependency>
				<groupId>org.javassist</groupId>
				<artifactId>javassist</artifactId>
				<version>${javassist_version}</version>
			</dependency>
			<dependency>
				<groupId>org.jboss.netty</groupId>
				<artifactId>netty</artifactId>
				<version>${netty_version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.mina</groupId>
				<artifactId>mina-core</artifactId>
				<version>${mina_version}</version>
			</dependency>
			<dependency>
				<groupId>org.glassfish.grizzly</groupId>
				<artifactId>grizzly-core</artifactId>
				<version>${grizzly_version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.httpcomponents</groupId>
				<artifactId>httpclient</artifactId>
				<version>${httpclient_version}</version>
			</dependency>
			<dependency>
				<groupId>com.alibaba</groupId>
				<artifactId>hessian-lite</artifactId>
				<version>${hessian_lite_version}</version>
			</dependency>
			<dependency>
				<groupId>com.alibaba</groupId>
				<artifactId>fastjson</artifactId>
				<version>${fastjson_version}</version>
			</dependency>
			<dependency>
				<groupId>com.thoughtworks.xstream</groupId>
				<artifactId>xstream</artifactId>
				<version>${xstream_version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.bsf</groupId>
				<artifactId>bsf-api</artifactId>
				<version>${bsf_version}</version>
			</dependency>
			<dependency>
				<groupId>org.jvnet.sorcerer</groupId>
				<artifactId>sorcerer-javac</artifactId>
				<version>${sorcerer_version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.zookeeper</groupId>
				<artifactId>zookeeper</artifactId>
				<version>${zookeeper_version}</version>
			</dependency>
			<dependency>
				<groupId>com.github.sgroschupf</groupId>
				<artifactId>zkclient</artifactId>
				<version>${zkclient_version}</version>
			</dependency>
			<dependency>
				<groupId>com.netflix.curator</groupId>
				<artifactId>curator-framework</artifactId>
				<version>${curator_version}</version>
			</dependency>
			<dependency>
				<groupId>redis.clients</groupId>
				<artifactId>jedis</artifactId>
				<version>${jedis_version}</version>
			</dependency>
			<dependency>
				<groupId>com.googlecode.xmemcached</groupId>
				<artifactId>xmemcached</artifactId>
				<version>${xmemcached_version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.cxf</groupId>
				<artifactId>cxf-rt-frontend-simple</artifactId>
				<version>${cxf_version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.cxf</groupId>
				<artifactId>cxf-rt-transports-http</artifactId>
				<version>${cxf_version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.thrift</groupId>
				<artifactId>libthrift</artifactId>
				<version>${thrift_version}</version>
			</dependency>
			<dependency>
				<groupId>jfree</groupId>
				<artifactId>jfreechart</artifactId>
				<version>${jfreechart_version}</version>
			</dependency>
			<dependency>
				<groupId>com.caucho</groupId>
				<artifactId>hessian</artifactId>
				<version>${hessian_version}</version>
			</dependency>
			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>servlet-api</artifactId>
				<version>${servlet_version}</version>
			</dependency>
			<dependency>
				<groupId>org.mortbay.jetty</groupId>
				<artifactId>jetty</artifactId>
				<version>${jetty_version}</version>
			</dependency>
			<dependency>
				<groupId>javax.validation</groupId>
				<artifactId>validation-api</artifactId>
				<version>${validation_version}</version>
			</dependency>
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-validator</artifactId>
				<version>${hibernate_validator_version}</version>
			</dependency>
			<dependency>
				<groupId>javax.cache</groupId>
				<artifactId>cache-api</artifactId>
				<version>${jcache_version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.tuscany.sca</groupId>
				<artifactId>tuscany-sca-api</artifactId>
				<version>${sca_version}</version>
			</dependency>
			<dependency>
				<groupId>com.google.inject</groupId>
				<artifactId>guice</artifactId>
				<version>${guice_version}</version>
			</dependency>
			<dependency>
				<groupId>com.alibaba.citrus</groupId>
				<artifactId>citrus-webx-all</artifactId>
				<version>${webx_version}</version>
			</dependency>
			<!-- Log libs -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j_version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-log4j12</artifactId>
				<version>${slf4j_version}</version>
			</dependency>
			<dependency>
				<groupId>commons-logging</groupId>
				<artifactId>commons-logging-api</artifactId>
				<version>${jcl_version}</version>
			</dependency>
			<dependency>
				<groupId>log4j</groupId>
				<artifactId>log4j</artifactId>
				<version>${log4j_version}</version>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>${logback_version}</version>
			</dependency>
			<!-- Test libs -->
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit_version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.easymock</groupId>
				<artifactId>easymock</artifactId>
				<version>${easymock_version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>com.googlecode.jmockit</groupId>
				<artifactId>jmockit</artifactId>
				<version>${jmockit_version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.easymock</groupId>
				<artifactId>easymockclassextension</artifactId>
				<version>${easymock_version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>cglib</groupId>
				<artifactId>cglib-nodep</artifactId>
				<version>${cglib_version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-test</artifactId>
				<version>${spring_version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>

		</plugins>
	</build>
</project>
